# lightstreamer-cpp-coroutines

./: README.md
pocoro/: CMakeLists.txt  main.cpp
pocoro/pocoro/implement/: async_auto_reset_event.cpp  async_manual_reset_event.cpp  async_mutex.cpp  auto_reset_event.cpp  auto_reset_event.hpp  cancellation_registration.cpp  cancellation_source.cpp  cancellation_state.cpp  cancellation_state.hpp  cancellation_token.cpp  file.cpp  file_read_operation.cpp  file_write_operation.cpp  io_service.cpp  ip_address.cpp  ip_endpoint.cpp  ipv4_address.cpp  ipv4_endpoint.cpp  ipv6_address.cpp  ipv6_endpoint.cpp  lightweight_manual_reset_event.cpp  read_only_file.cpp  read_write_file.cpp  readable_file.cpp  socket.cpp  socket_accept_operation.cpp  socket_connect_operation.cpp  socket_disconnect_operation.cpp  socket_helpers.cpp  socket_helpers.hpp  socket_recv_from_operation.cpp  socket_recv_operation.cpp  socket_send_operation.cpp  socket_send_to_operation.cpp  spin_mutex.cpp  spin_mutex.hpp  spin_wait.cpp  spin_wait.hpp  static_thread_pool.cpp  win32.cpp  (+2 more)
pocoro/pocoro/pocorocore/: async_auto_reset_event.hpp  async_generator.hpp  async_latch.hpp  async_manual_reset_event.hpp  async_mutex.hpp  async_scope.hpp  awaitable_traits.hpp  broken_promise.hpp  cancellation_registration.hpp  cancellation_source.hpp  cancellation_token.hpp  config.hpp  file.hpp  file_buffering_mode.hpp  file_open_mode.hpp  file_read_operation.hpp  file_share_mode.hpp  file_write_operation.hpp  fmap.hpp  io_service.hpp  is_awaitable.hpp  on_scope_exit.hpp  operation_cancelled.hpp  read_only_file.hpp  read_write_file.hpp  readable_file.hpp  static_thread_pool.hpp  sync_wait.hpp  task.hpp  when_all.hpp  when_all_ready.hpp  writable_file.hpp  write_only_file.hpp
pocoro/pocoro/pocorocore/detail/: any.hpp  get_awaiter.hpp  is_awaiter.hpp  lightweight_manual_reset_event.hpp  manual_lifetime.hpp  remove_rvalue_reference.hpp  sync_wait_task.hpp  unwrap_reference.hpp  void_value.hpp  when_all_counter.hpp  when_all_ready_awaitable.hpp  when_all_task.hpp  win32.hpp  win32_overlapped_operation.hpp
pocoro/pocoro/pocorocore/net/: ip_address.hpp  ip_endpoint.hpp  ipv4_address.hpp  ipv4_endpoint.hpp  ipv6_address.hpp  ipv6_endpoint.hpp  socket.hpp  socket_accept_operation.hpp  socket_connect_operation.hpp  socket_disconnect_operation.hpp  socket_recv_from_operation.hpp  socket_recv_operation.hpp  socket_send_operation.hpp  socket_send_to_operation.hpp
