cmake_minimum_required(VERSION 3.22)
project(pocoro)

set(CMAKE_CXX_STANDARD 20)

add_executable(
pocoro
main.cpp
pocoro/pocorocore/async_auto_reset_event.hpp 
pocoro/pocorocore/async_generator.hpp 
pocoro/pocorocore/config.hpp
pocoro/pocorocore/async_latch.hpp
pocoro/pocorocore/async_manual_reset_event.hpp
pocoro/pocorocore/async_mutex.hpp 
pocoro/pocorocore/async_scope.hpp 
pocoro/pocorocore/awaitable_traits.hpp 
pocoro/pocorocore/detail/get_awaiter.hpp 
pocoro/pocorocore/detail/any.hpp 
pocoro/pocorocore/detail/is_awaiter.hpp 
pocoro/pocorocore/detail/lightweight_manual_reset_event.hpp
pocoro/pocorocore/detail/manual_lifetime.hpp 
pocoro/pocorocore/detail/remove_rvalue_reference.hpp 
pocoro/pocorocore/detail/sync_wait_task.hpp 
pocoro/pocorocore/detail/unwrap_reference.hpp 
pocoro/pocorocore/detail/void_value.hpp 
pocoro/pocorocore/detail/when_all_counter.hpp 
pocoro/pocorocore/detail/when_all_ready_awaitable.hpp 
pocoro/pocorocore/detail/when_all_task.hpp 
pocoro/pocorocore/detail/win32.hpp 
pocoro/pocorocore/detail/win32_overlapped_operation.hpp 
pocoro/pocorocore/cancellation_registration.hpp 
pocoro/pocorocore/cancellation_token.hpp 
pocoro/pocorocore/operation_cancelled.hpp 
pocoro/pocorocore/net/ip_address.hpp 
pocoro/pocorocore/net/ip_endpoint.hpp 
pocoro/pocorocore/net/ipv4_address.hpp 
pocoro/pocorocore/net/ipv4_endpoint.hpp 
pocoro/pocorocore/net/ipv6_address.hpp 
pocoro/pocorocore/net/ipv6_endpoint.hpp 
pocoro/pocorocore/net/socket.hpp 
pocoro/pocorocore/net/socket_accept_operation.hpp 
pocoro/pocorocore/net/socket_connect_operation.hpp 
pocoro/pocorocore/net/socket_disconnect_operation.hpp 
pocoro/pocorocore/net/socket_recv_from_operation.hpp 
pocoro/pocorocore/net/socket_recv_operation.hpp 
pocoro/pocorocore/net/socket_send_operation.hpp 
pocoro/pocorocore/net/socket_send_to_operation.hpp 
pocoro/pocorocore/io_service.hpp 
pocoro/pocorocore/cancellation_source.hpp 
pocoro/pocorocore/on_scope_exit.hpp 
pocoro/pocorocore/task.hpp 
pocoro/pocorocore/broken_promise.hpp
pocoro/pocorocore/sync_wait.hpp
pocoro/pocorocore/file.hpp
pocoro/pocorocore/file_buffering_mode.hpp
pocoro/pocorocore/file_open_mode.hpp
pocoro/pocorocore/file_read_operation.hpp
pocoro/pocorocore/file_share_mode.hpp
pocoro/pocorocore/file_write_operation.hpp
pocoro/implement/async_auto_reset_event.cpp
pocoro/implement/async_manual_reset_event.cpp
pocoro/implement/async_mutex.cpp
pocoro/implement/auto_reset_event.cpp
pocoro/implement/auto_reset_event.hpp
pocoro/implement/cancellation_registration.cpp
pocoro/implement/cancellation_source.cpp
pocoro/implement/cancellation_state.hpp
pocoro/implement/cancellation_state.cpp
pocoro/implement/cancellation_token.cpp
pocoro/implement/file.cpp
pocoro/implement/file_read_operation.cpp
pocoro/implement/file_write_operation.cpp
pocoro/implement/io_service.cpp
pocoro/implement/ip_address.cpp
pocoro/implement/ip_endpoint.cpp
pocoro/implement/ipv4_address.cpp
pocoro/implement/ipv4_endpoint.cpp
pocoro/implement/ipv6_address.cpp
pocoro/implement/ipv6_endpoint.cpp
pocoro/implement/lightweight_manual_reset_event.cpp
pocoro/implement/read_only_file.cpp
pocoro/implement/read_write_file.cpp
pocoro/implement/readable_file.cpp
pocoro/implement/socket.cpp
pocoro/implement/socket_accept_operation.cpp
pocoro/implement/socket_connect_operation.cpp
pocoro/implement/socket_disconnect_operation.cpp
pocoro/implement/socket_helpers.hpp
pocoro/implement/socket_helpers.cpp
pocoro/implement/socket_recv_from_operation.cpp
pocoro/implement/socket_recv_operation.cpp
pocoro/implement/socket_send_to_operation.cpp
pocoro/implement/socket_send_operation.cpp
pocoro/implement/spin_mutex.hpp
pocoro/implement/spin_mutex.cpp
pocoro/implement/spin_wait.hpp
pocoro/implement/spin_wait.cpp
pocoro/implement/static_thread_pool.cpp
pocoro/implement/win32.cpp
pocoro/implement/writable_file.cpp
pocoro/implement/write_only_file.cpp
        pocoro/pocorocore/when_all.hpp pocoro/pocorocore/is_awaitable.hpp pocoro/pocorocore/when_all_ready.hpp pocoro/pocorocore/fmap.hpp pocoro/pocorocore/read_only_file.hpp pocoro/pocorocore/readable_file.hpp pocoro/pocorocore/read_write_file.hpp pocoro/pocorocore/writable_file.hpp pocoro/pocorocore/static_thread_pool.hpp pocoro/pocorocore/write_only_file.hpp)
